@@ -443,6 +443,16 @@ directive starts a new stanza.
     for each stanza in the access.conf file.  This way, multiple external
     users can each directly access only one internal system per SPA key.
 
+*FORCE_SNAT* '<IP>'::
+    For any valid SPA packet, add an SNAT rule in addition to any DNAT rule
+    created with a corresponding (required) FORCE_NAT variable.  This is
+    analogous to SNAT_TRANSLATE_IP from the '@sysconfdir@/fwknop/fwknopd.conf'' file
+    except that it is per access stanza and overrides any value set with
+    SNAT_TRANSLATE_IP.  This is useful for situations where an incoming NAT'd
+    connection may be otherwise unanswerable due to routing constraints (i.e.
+    the system receiving the SPA authenticated connection has a default route
+    to a different device than the SPA system itself).
+
 *GPG_HOME_DIR* '<path>'::
     Define the path to the GnuPG directory to be used by the *fwknopd*
     server.  If this keyword is not specified within '@sysconfdir@/fwknop/access.conf' then
