@@ -29,6 +29,8 @@ fwknop-2.5.2 (//2013):
     - [server] Bug fix for SPA NAT modes on iptables firewalls to ensure that
       custom fwknop chains are re-created if they get deleted out from under
       the running fwknopd instance.
+    - [server] Added FORCE_SNAT to the access.conf file so that per-access
+      stanza SNAT criteria can be specified for SPA access.
     - [test suite] added --gdb-test to allow a previously executed fwknop
       or fwknopd command to be sent through gdb with the same command line
       args as the test suite used.  This is for convenience to rapidly allow
